name:                ReversibleInterpreter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/calvinnolan/ReversibleInterpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          baked@beans.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ReversibleInterpreter-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ReversibleInterpreter
                     , mtl
                     , containers
  other-modules:       Interpreter
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/calvinnolan/ReversibleInterpreter
